--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/index.xhtml
@@ -4,7 +4,7 @@
 	<com:ko tag="if" bind="isFlex">
 		<div class="control-group">
 			<div data-bind="ntsFormLabel: {}">#{i18n.getText('KMK003_141')}</div>
-			<div data-bind="ntsSwitchButton: {
+			<div tabindex="1" data-bind="ntsSwitchButton: {
 				options: switchDs,
 				optionsValue: 'code',
 				optionsText: 'name',
@@ -15,7 +15,7 @@
 	<com:ko tag="if" bind="isFlow">
 		<div class="control-group">
 			<div data-bind="ntsFormLabel: {}">#{i18n.getText('KMK003_141')}</div>
-			<div data-bind="ntsSwitchButton: {
+			<div tabindex="1" data-bind="ntsSwitchButton: {
 				options: switchDs,
 				optionsValue: 'code',
 				optionsText: 'name',
@@ -115,18 +115,18 @@
 					<div id="flexRestOneDay" class="default-input-width"
 						data-bind="ntsFixTableCustom: {option: oneDayFlexRestSetOption}"></div>
 					<com:ko tag="with" bind="oneDayFlexRestSet">
-						<div data-bind="ntsCheckBox: {
+						<div tabindex="1" data-bind="ntsCheckBox: {
 							checked: useHereAfterRestSet,
 							enable: true,
 							text: nts.uk.resource.getText('KMK003_144') }"></div>
-						<table class="tbl-after-restset default-input-width">
+						<table tabindex="1" class="tbl-after-restset default-input-width">
 							<tr>
 								<th>#{i18n.getText('KMK003_174')}</th>
 								<th>#{i18n.getText('KMK003_176')}</th>
 							</tr>
 							<tr>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_174]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -137,7 +137,7 @@
 										enable: useHereAfterRestSet }" />
 								</td>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_176]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -163,7 +163,7 @@
 					<div id="flexRestOneDay" class="default-input-width"
 						data-bind="ntsFixTableCustom: {option: oneDayFlexRestSetOption}"></div>
 					<com:ko tag="with" bind="oneDayFlexRestSet">
-						<div data-bind="ntsCheckBox: {
+						<div tabindex="1" data-bind="ntsCheckBox: {
 							checked: useHereAfterRestSet,
 							enable: true,
 							text: nts.uk.resource.getText('KMK003_144') }"></div>
@@ -174,7 +174,7 @@
 							</tr>
 							<tr>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_174]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -185,7 +185,7 @@
 										enable: useHereAfterRestSet }" />
 								</td>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_176]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -209,7 +209,7 @@
 					<div id="flexRestMorning" class="default-input-width"
 						data-bind="ntsFixTableCustom: {option: morningFlexRestSetOption}"></div>
 					<com:ko tag="with" bind="morningFlexRestSet">
-						<div data-bind="ntsCheckBox: {
+						<div tabindex="1" data-bind="ntsCheckBox: {
 							checked: useHereAfterRestSet,
 							enable: true,
 							text: nts.uk.resource.getText('KMK003_144') }"></div>
@@ -220,7 +220,7 @@
 							</tr>
 							<tr>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_174]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -231,7 +231,7 @@
 										enable: useHereAfterRestSet }" />
 								</td>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_176]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -255,7 +255,7 @@
 					<div id="flexRestAfternoon" class="default-input-width"
 						data-bind="ntsFixTableCustom: {option: afternoonFlexRestSetOption}"></div>
 					<com:ko tag="with" bind="afternoonFlexRestSet">
-						<div data-bind="ntsCheckBox: {
+						<div tabindex="1" data-bind="ntsCheckBox: {
 							checked: useHereAfterRestSet,
 							enable: true,
 							text: nts.uk.resource.getText('KMK003_144') }"></div>
@@ -266,7 +266,7 @@
 							</tr>
 							<tr>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_174]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
@@ -277,7 +277,7 @@
 										enable: useHereAfterRestSet }" />
 								</td>
 								<td>
-									<input data-bind="ntsTimeEditor: {
+									<input tabindex="1" data-bind="ntsTimeEditor: {
 										name: '#[KMK003_176]',
 										option: {textalign: 'center'},
 										constraint: 'AttendanceTime',
