Change enterKey to Kiban handler

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/b/index.xhtml
@@ -34,7 +34,8 @@
 											options: dataSource,
 											optionsValue: 'userID',
 											columns: columns,
-											value: selectUserID}">
+											value: selectUserID,
+											enterkey: enterPress}">
 					</table>
 
 				</div>
