--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/b/index.xhtml
@@ -40,7 +40,8 @@
 											options: dataSource,
 											optionsValue: 'userID',
 											columns: columns,
-											value: selectUserID}">
+											value: selectUserID,
+											enterkey: enterPress}">
 						</table>
 					</div>
 				</div>
