fix bug KMK009: #87220

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/009/a/index.xhtml
@@ -252,7 +252,7 @@
 									<!-- A3_24: Check error(select) -->
 									<div tabindex="13"
 										data-bind="ntsCheckBox:{
-									checked: itemTotalTimesDetail.countAtr() == 0 ? true : false,
+									checked: checkedCountAtr,
 									enable: enableUse,
 									text: '#{i18n.getText('KMK009_21')}'}">
 									</div>
