--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/index.xhtml
@@ -23,7 +23,7 @@
 			</ui:define>
 	
 			<ui:define name="content">
-				<div id="functions-area" data-bind="visible: true" style="display: none">
+				<div id="functions-area">
 					<button tabindex="1" class="proceed" data-bind="click: saveOutsideOTSetting">#{i18n.getText('KMK010_4')}</button>
 					<button tabindex="2" class="buttonOther" data-bind="click: exportFileExcelOutsideOTSetting">#{i18n.getText('KMK010_5')}</button>
 					<button tabindex="3" class="buttonOther" data-bind="click: openDialogOutsideOTSetting" >#{i18n.getText('KMK010_6')}</button>
