--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
@@ -39,7 +39,7 @@
 					</com:ko-foreach>
 				</colgroup>
 				<thead>
-					<tr>
+					<tr style="height: 30px;">
 						<com:ko tag="if" bind="isVisibleSelectAll">
 							<th style="text-align: center;" class="ui-widget-header"><div
 									data-bind="ntsCheckBox: { checked: isSelectAll,
