Update UI KAL004

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/periodSetting/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/periodSetting/index.xhtml
@@ -18,7 +18,7 @@
 			            <tr>
 			                <td>a</td>
 			                <td>d</td>
-			                <td><button data-bind="click: OpenDialog" >dialog</button></td>
+			                <td><button data-bind="click: openDialog" >dialog</button></td>
 			            </tr>
 			        </tbody>
 		    </table>
