Fix scroll tab 8

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a8/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a8/index.xhtml
@@ -40,8 +40,9 @@
 				dataSource: workTimeTabs, 
 				active: workTimeSelectedTab,
 				direction: 'horizontal' }">
-		
-			<div class="personal-setting-tab-content" style="min-width: 1200px;">						
+					
+			<div class="personal-setting-tab-content">				
+				<div class="personal-setting-tab-container" style="min-width: 1200px;">	
 				<table style="display: inline-block;">
 					<tr>
 						<td colspan="4">
@@ -266,6 +267,7 @@
 						</td>
 					</tr>
 				</table>
+				</div>	
 			</div>
 			
 			<div class="official-setting-tab-content">					
