PrimitiveValue & FormLabel samples

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/label/form-label.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/label/form-label.xhtml
@@ -32,6 +32,9 @@
 		            	<div data-bind="ntsFormLabel: { cssClass: css, constraint: 'ResidenceCode', enable: false, text: text }"></div><br /><br />
 		            	<div data-bind="ntsFormLabel: { constraint: constraint, required: true }">レイアウトコード</div><br /><br />
 		            	<div data-bind="ntsFormLabel: { constraint: 'ResidenceCode', inline: inline, required: required, enable: enable}">レイアウトコード</div><br />
+						<p>
+							<a href="./form-label-list.xhtml">FormLabel List</a>
+						</p>
 						<article class="cf">
 							<div class="tabs">
 								<ol>
