kal003a: update UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -105,7 +105,7 @@
 								<span>Tab Content 2</span><br />
 <!-- 								<ui:include src="../b/index.xhtml" /> -->
 							</div>
-							<div class="tab-content-3" data-bind="with: checkConditionTab">
+							<div class="tab-content-3" data-bind="with: tabCheckCondition">
  								<ui:include src="common/checkconditions.xhtml" />
 							</div>
 							<div class="tab-content-4">
