--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
@@ -15,11 +15,11 @@
 	       <tr>
 		       <td class = "pad_left_10px">
 			       <!-- A11_1 -->
-			       <div class = "pad_left_10px"><button data-bind="click: createNewCheckCondition_click,enable: true">#{i18n.getText('KAL003_A11_1')}</button></div>
+			       <div class = "pad_left_10px"><button data-bind="click: createNewCheckCondition_click,enable: true">#{i18n.getText('KAL003_21')}</button></div>
 	           </td>
 	           <td class = "pad_left_10px"> 
 	               <!-- A11_2 -->
-                    <div class = "pad_left_10px"><button data-bind="click: deleteCheckCondition_click, enable: true">#{i18n.getText('KAL003_A11_2')}</button></div>
+                    <div class = "pad_left_10px"><button data-bind="click: deleteCheckCondition_click, enable: true">#{i18n.getText('KAL003_22')}</button></div>
                </td>
            </tr>
 	    </table>
@@ -29,19 +29,19 @@
 	<div id="div_table_check_conditions">
 	   <table id="check-condition-table">
 	       <colgroup>
-		        <col width="35px"/>
-		        <col width="35px"/>
+		        <col width="36px"/>
+		        <col width="36px"/>
 		        <col width="230px"/>
-		        <col width="80px"/>
+		        <col width="90px"/>
 		        <col width="230px"/>
 		    </colgroup>
 		    <thead>
 		        <tr>
 		            <th class="ui-widget-header" style ="text-align: center;"><div data-bind="ntsCheckBox: {checked: isAllCheckCondistion}"></div></th>
-		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_A11_5')}</th>
-		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_A11_6')}</th>
-		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_A11_7')}</th>
-		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_A11_8')}</th>
+		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_24')}</th>
+		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_12')}</th>
+		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_23')}</th>
+		            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_25')}</th>
 		        </tr>
 	        </thead>
 	       <tbody data-bind="foreach: listWorkRecordExtractingConditions">
@@ -62,7 +62,7 @@
 			            }))}" />
                    </td>
                    <td style ="text-align: center;">
-                       <button data-bind="click: function() {$parent.btnSettingCheckCondition_click(rowId)},enable: true">#{i18n.getText('KAL003_A11_12')}</button>
+                       <button data-bind="click: function() {$parent.btnSettingCheckCondition_click(rowId)},enable: true">#{i18n.getText('KAL003_14')}</button>
                    </td>
                    <td>
                        <input data-bind="ntsTextEditor: {value: errorAlarmCondition().message,
