hide icon temporarily in title of message dialog

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_dialog.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_dialog.scss
@@ -29,6 +29,9 @@
 		display:inline-block;
 		margin-right:5px;
 		margin: .1em 0;
+		
+		/* アイコンが決まるまで非表示にしておく */
+		display: none;
 	}
 	.ui-dialog-titlebar-container{
 		width:100%;
