--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_ntsgrid.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_ntsgrid.scss
@@ -12,7 +12,7 @@
 .nts-grid-wrapper table tr.ui-ig-altrecord td.ui-state-hover,
 .nts-grid tr td.ui-state-hover,
 .nts-grid tr.ui-ig-altrecord td.ui-state-hover {
-  background-color: aqua;
+  background-color: #C5F1F7;
   border-color: #AAB7B8;
 }
 
@@ -27,6 +27,24 @@
 	background-color: #CCC;
 	color: gray;
 }
+
+.nts-grid-wrapper td.currency-symbol:before,
+.nts-grid td.currency-symbol:before {
+	content: '\00a5';
+	top: 6px;
+	color: #999;
+	padding-right: 4px;
+}
+
+.nts-grid-wrapper span.input-currency-symbol:before,
+.nts-grid span.input-currency-symbol:before {
+	position: absolute;
+	content: '\00a5';
+	top: 4px;
+	left: 2px;
+	color: #999;
+}
+
 .ui-iggrid .ui-iggrid-tablebody td {
 	height: 21px;
 }
