{KMK003} update UI specs change ver 8.0

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -351,6 +351,7 @@
 											</div>
 											<div tabindex="68" class="tab-a5">
 												<div data-bind="ntsKMK003A5: { isDetailMode: isDetailMode,
+													useHalfDay: useHalfDay,
 													mainSettingModel: mainSettingModel }">
 												</div>
 											</div>
