cps005: add params in msg_928

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/a/index.xhtml
@@ -141,7 +141,7 @@
 								optionsValue: 'value',
 								optionsText: 'name',
 								value: singleMulTypeSelected,
-								enable: true }">
+								enable: isChangeAbleCtgType }">
 									</div>
 									<button tabindex="9"
 										data-bind="ntsHelpButton: {image: '../image/singe_multi.png', position: 'right top', enable: true }">?</button>
