--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
@@ -69,7 +69,7 @@
 							<!-- thanh tìm kiếm  -->
 						<div tabindex="7"
 							data-bind="ntsSearchBox: {
-								searchMode: 'highlight',
+								searchMode: 'filter',
 								targetKey: 'selectionItemId',
 								mode: 'igGrid', 
 								comId: 'sel_item_grid',
@@ -181,7 +181,7 @@
 										value: selectionCD,
 										constraint: 'SelectionCD', 
 										required: true, 
-										enable: $parent.selection().selectionID() == undefined , 
+										enable: $parent.selectionCd, 
 		 								immediate: false									
 										}" />
 								</span>
@@ -192,7 +192,7 @@
 										value: selectionCD,
 										constraint: 'SelectionCD', 
 										required: true, 
-										enable: $parent.selection().selectionID() == undefined , 
+										enable: $parent.selectionCd, 
 		 								immediate: false}" />
 								</span> 
 							</div>
