非表示タブのcontentのheightがすごく大きくなってしまう問題に対処。

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_tabpanel.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_tabpanel.scss
@@ -32,6 +32,13 @@
 		border: 2px solid $frame_border_color;
 		border-radius: 7px;
 		display: block !important;
+		
+		&.disappear {
+			> div {
+				height: 100% !important;
+				overflow: hidden !important;
+			}
+		}
 	}
 	
 	&.vertical {
