--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011/f/index.xhtml
@@ -33,7 +33,7 @@
 				<span data-bind="text: workplaceName"></span>
 			</div>
 
-			<div id="radio-group-box" tabindex="1" data-bind="ntsRadioBoxGroup: {
+			<div id="radio-group-box" tabindex="1" style="width: 350px" data-bind="ntsRadioBoxGroup: {
 				name: '#[CMM011_31]',
 				options: itemList,
 				optionsValue: 'value',
