--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/cmm001.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/cmm001.a.style.css
@@ -1,13 +1,13 @@
 @CHARSET "UTF-8";
 #contents-area{
-	width: 1340px;
+	width: 1340px !important;
 }
 .outer {
 	outline: 1px solid #FF6138;
 }
 
 #functions-area {
-	height: 50px;
+	height: 50px !important;
 }
 
 #reset {
@@ -82,7 +82,7 @@
 .div-right-content {
 	float: left;
 	padding: 20px;
-	width: 700px;
+	width: 650px;
 }
 
 .form-label {
@@ -313,6 +313,4 @@ body>div:nth-child(4) {
 	height: 370px;
 }
 
-#tab-3{
-	overflow: visible !important;
-}
+
