--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/kal003.b.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/kal003.b.style.css
@@ -30,16 +30,10 @@
 .value-input {width: 70px}
 .nts-editor-wrapped {display: initial !IMPORTANT;}
 
-
-#table-groupcondition {
-    border-collapse: collapse;
+.ntsRadioBox {
+	margin-right: 20px;
 }
-
-#table-groupcondition .description {
-    display: inline-block;
-    white-space: nowrap;
-}
-
-#table-groupcondition .border1 {
-    border: 1px solid black;
+.ntsRadioBox span.label {
+  display: inline-block;
+  padding-left: 5px;
 }
