--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
@@ -32,10 +32,6 @@
 						</tr>
 						<tr tabindex="-1">
 							<td class="bg-green titleScheduleSetting" >#{i18n.getText('KSC001_50')}</td>
-							<td class="valueScheduleSetting" data-bind="text: executionTotal"></td>
-						</tr>
-						<tr tabindex="-1">
-							<td class="bg-green titleScheduleSetting" >#{i18n.getText('KSC001_50')}</td>
 							<td class="valueScheduleSetting" ><ul class="countdown">
 										<!-- <li><span class="days">00</span>
 											<p class="days_ref">days</p></li>
@@ -52,7 +48,10 @@
 						</tr>
 						<tr tabindex="-1">
 							<td  class="bg-green titleScheduleSetting">#{i18n.getText('KSC001_51')}</td>
-							<td class="valueScheduleSetting" data-bind="text: scheduleExecutionLogModel.completionStatus"></td>
+							<td class="valueScheduleSetting"> 
+								<span class="label" data-bind="text: scheduleExecutionLogModel.completionStatus"></span>
+								<span class="label" data-bind="text: executionTotal"></span>
+							</td>
 						</tr>
 						<tr tabindex="-1">
 							<td class="bg-green titleScheduleSetting" >#{i18n.getText('KSC001_52')}</td>
