fix bug 87161  : update  primaryKey

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
@@ -75,7 +75,7 @@
 							<table id="tableShowError" data-bind="ntsGridList: {								
 								height: 350,
 								dataSource: errorLogs,
-								primaryKey: 'employeeId',
+								primaryKey: 'noID',
 								columns: columns,
 								multiple: false,
 								value: currentCode,
