--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
@@ -71,7 +71,7 @@
 						<tr>
 							<td><img alt="" src="72.png" /></td>
 							<td class="pad_5"><div>
-									<input tabindex="3"
+									<input tabindex="3" id="password-input"
 										data-bind="ntsTextEditor: {
 										name: '#{i18n.getText('CCG007_2')}',
 										value: password,
@@ -88,7 +88,7 @@
 						</tr>
 						<tr>
 							<td></td>
-							<td class="pad_5"><button tabindex="5"
+							<td class="pad_5"><button tabindex="5" id="login-btn"
 									data-bind="click: submitLogin" class="full_width proceed large">
 									<div data-bind="text: '#{i18n.getText('CCG007_3')}'"></div>
 								</button></td>
