--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/cmm018.a.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/cmm018.a.main.css
@@ -91,3 +91,6 @@ table#fixed-tableWpB tbody tr{
 table#fixed-tablePsB tbody tr{
 	max-height: 50px !important;
 }
+.overflow-visible {
+	overflow: visible !important;
+}
