--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/018/a/index.xhtml
@@ -164,7 +164,7 @@
 									<tbody data-bind = "foreach: cpA">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- A3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
@@ -334,7 +334,7 @@
 									<tbody style = "overflow-y: scroll; height: 200px;" data-bind = "with: comRoot">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- B3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<!-- B3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
@@ -547,7 +547,7 @@
 									<tbody style = "overflow-y: scroll; height: 200px;" data-bind = "foreach: cpA">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- C3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
@@ -717,7 +717,7 @@
 									<tbody style = "overflow-y: scroll; height: 200px;" data-bind = "with: comRoot">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- B3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<!-- B3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
@@ -926,7 +926,7 @@
 									<tbody style = "height: 200px;" data-bind = "foreach: cpA">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- E3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
 													<button data-bind="ntsHelpButton: {image: '../images/CMM018_001.png', position: 'right top',enable: true}" >?</button>
@@ -1098,7 +1098,7 @@
 									<tbody style = "overflow-y: scroll; height: 200px;" data-bind = "with: comRoot">
 										<tr data-bind="style: { background: color ? '#E0F59E' : 'white' }">
 											<!-- F3_12: App Name -->
-											<td class="name td-first-bg">
+											<td class="name td-first-bg overflow-visible">
 												<div data-bind = "text: appTypeName" style="display: inline-block;"></div>
 												<!-- B3_13: -->
 												<div style="display: inline-block;" data-bind="if: employRootAtr == 0">
